# FuturesForge

./: CMakeLists.txt  README.md  config.ini
data/: backtest_sample.csv  config.json  meta.json  positions.csv  positions_detail.csv  trade_log.csv  trade_summary.csv
include/TradingSystem/: BacktestMarketData.h  BacktestTrader.h  BarAggregator.h  ConfigUtil.h  Engine.h  Event.h  IBacktestMatching.h  IMarketData.h  ITrader.h  RiskManager.h  Strategy.h  TraderProxy.h
src/: main.cpp
src/backtest/: BacktestMarketData.cpp  BacktestTrader.cpp
src/core/: BarAggregator.cpp  ConfigUtil.cpp  Engine.cpp  RiskManager.cpp  TraderProxy.cpp
src/ctp/: CtpMarketData.cpp  CtpMarketData.h  CtpTrader.cpp  CtpTrader.h
src/stub/: StubMarketData.cpp  StubMarketData.h  StubTrader.cpp  StubTrader.h
